<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="mul">×</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="div">÷</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="pi">π</string>
    <string name="inv">1/x</string>
    <string name="sqrt">√</string>
    <string name="x_fact">x!</string>
    <string name="x_square">x²</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="_e">e</string>
    <string name="open_para">)</string>
    <string name="close_para">(</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="error">Error</string>
    <string name="sound_off">Sound: OFF</string>
    <string name="sound_on">Sound: ON</string>
</resources>